Create a new DataBase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 db.url=jdbc:mysql://172.16.95.36:3306/spbgut2
 db.username=root
 db.password=root
+db.username2=localhost
+db.password2=localhost
+db.url2=jdbc:mysql://172.16.95.37:3306/spbgut2
