--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ db.password=root
 db.username2=localhost
 db.password2=localhost
 db.url2=jdbc:mysql://172.16.95.37:3306/spbgut2
+db.url3=jdbc:mysql://192.168.1.109:3306/spbgut2
